<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/action_settings" >

    <PreferenceCategory android:title="@string/action_settings" >
        <Preference
            android:key="@string/key_clear_cache"
            android:title="@string/clear_cache" />

        <Preference
            android:key="@string/key_update"
            android:title="@string/update" />
        <CheckBoxPreference 
            android:defaultValue="false"
            android:summaryOn="如果播放异常请取消勾选"
            android:key="@string/key_hw_decode"
            android:title="@string/hw_decode" />
        <CheckBoxPreference 
            android:defaultValue="true"
            android:summaryOn="如果弹幕播放失败请取消勾选"
            android:key="@string/key_dm_cache"
            android:title="@string/dm_cache" />
        <CheckBoxPreference 
            android:defaultValue="false"
            android:summaryOff="如果视频全是马赛克请勾选"
            android:key="@string/key_chroma_565"
            android:title="@string/video_chroma_565" />
        <ListPreference android:entries="@array/pref_resolution_entries"
            android:key="@string/key_resolution_mode"
            android:entryValues="@array/pref_resolution_values"
            android:title="@string/resolution"
            android:defaultValue="@integer/high_d"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/others" >
        <Preference
            android:key="@string/key_about"
            android:title="@string/about" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_url" />
        </Preference>
        <Preference
            android:key="@string/key_rating"
            android:title="@string/rating" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=tv.ac.fun" />
        </Preference>
        <Preference
            android:key="@string/key_feedback"
            android:title="@string/feed_back" />
        <!-- <Preference
            android:key="@string/key_donate"
            android:summary="@string/buy_me_coffee"
            android:title="@string/donate" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/donate_url" />
        </Preference> -->
    </PreferenceCategory>

</PreferenceScreen>